@@ -7,7 +7,6 @@ import wow.commons.model.attributes.Attributes;
 import wow.commons.model.attributes.StatProvider;
 import wow.commons.model.attributes.complex.SpecialAbility;
 import wow.commons.model.attributes.complex.SpecialAbilitySource;
-import wow.commons.util.AttributesBuilder;
 
 /**
  * User: POlszewski
@@ -15,9 +14,9 @@ import wow.commons.util.AttributesBuilder;
  */
 @Getter
 public class OnUseAbility extends SpecialAbility {
-	private final Attributes attributes;
 	private final Duration duration;
 	private final Duration cooldown;
+	private Attributes equivalent;
 
 	public OnUseAbility(
 			Attributes attributes,
@@ -27,8 +26,7 @@ public class OnUseAbility extends SpecialAbility {
 			AttributeCondition condition,
 			SpecialAbilitySource source
 	) {
-		super(line, 2, condition, source);
-		this.attributes = attributes;
+		super(line, 2, attributes, condition, source);
 		this.duration = duration;
 		this.cooldown = cooldown;
 		if (attributes == null || duration == null || cooldown == null) {
@@ -38,22 +36,25 @@ public class OnUseAbility extends SpecialAbility {
 
 	@Override
 	public OnUseAbility attachCondition(AttributeCondition condition) {
-		return new OnUseAbility(attributes, duration, cooldown, getLine(), condition, getSource());
+		return new OnUseAbility(getAttributes(), duration, cooldown, getLine(), condition, getSource());
 	}
 
 	@Override
 	public OnUseAbility attachSource(SpecialAbilitySource source) {
-		return new OnUseAbility(attributes, duration, cooldown, getLine(), condition, source);
+		return new OnUseAbility(getAttributes(), duration, cooldown, getLine(), condition, source);
 	}
 
 	@Override
 	public Attributes getStatEquivalent(StatProvider statProvider) {
-		double factor = duration.divideBy(cooldown);
-		return AttributesBuilder.attachCondition(attributes.scale(factor), condition);
+		if (equivalent == null) {
+			double factor = duration.divideBy(cooldown);
+			equivalent = getAttributes().scale(factor);
+		}
+		return equivalent;
 	}
 
 	@Override
 	protected String doToString() {
-		return String.format("(%s | %s/%s)", attributes, duration, cooldown);
+		return "(%s | %s/%s)".formatted(getAttributes(), duration, cooldown);
 	}
 }
